--- a/index.html
+++ b/index.html
@@ -55,38 +55,38 @@
             <img src="./images/photo-grid-tuman.jpg" alt="рис. 12" class="photo-grid__item">
         </section>
         <section class="places">
-            <div class="places__place">
-                <h3 class="places__place__title">Куршская коса</h3>
-                <div class="places__place__website">
-                    <p class="places__place__website-url-heading">URL</p>
-                    <a href="http://park-kosa.ru" class="places__place__website-link">park-kosa.ru</a>
+            <div class="place">
+                <h3 class="place__title">Куршская коса</h3>
+                <div class="place__website">
+                    <p class="place__website-url-heading">URL</p>
+                    <a href="http://park-kosa.ru" class="place__website-link">park-kosa.ru</a>
                 </div>
-                <img src="./images/place-kosa.jpg" alt="коса" class="places__place__image">
+                <img src="./images/place-kosa.jpg" alt="коса" class="place__image">
                 <div>
-                <p class="places__place__paragraph">
+                <p class="place__paragraph">
                     Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного 
                     Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная природная зона на краю российского анклава.
                 </p>
-                <p class="places__place__paragraph">
+                <p class="place__paragraph">
                     На этом Калининградская область не заканчивается. 
                     Для путешественника и исследователя там же по соседству — самая западная точка России, Балтийская коса, — и немецкое наследие россыпи небольших приморских городов. 
                     Атмосфера здешних мест исключает суету, окуная в спокойствие природы и запах стального, прохладного моря.
                 </p>
                 </div>
             </div>
-            <div class="places__place">
-                <h3 class="places__place__title">Кольский</h3>
-                <div class="places__place__website">
-                    <p class="places__place__website-url-heading">URL</p>
-                    <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" class="places__place__website-link">National Geographic</a>
+            <div class="place">
+                <h3 class="place__title">Кольский</h3>
+                <div class="place__website">
+                    <p class="place__website-url-heading">URL</p>
+                    <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" class="place__website-link">National Geographic</a>
                 </div>
-                <img src="./images/place-kolsky.jpg" alt="кольский" class="places__place__image">
+                <img src="./images/place-kolsky.jpg" alt="кольский" class="place__image">
                 <div>
-                <p class="places__place__paragraph">
+                <p class="place__paragraph">
                     Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на юг — 
                     тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.
                 </p>
-                <p class="places__place__paragraph">
+                <p class="place__paragraph">
                     Возможно, вы смотрели Звягинцева и даже слышали историю арктического фестиваля в Териберке. 
                     Возможно, слово «Хибины» не осталось под снегом школьных воспоминаний об уроках географии. 
                     Возможно, вы не интересовались пронизывающей земную кору сверхглубокой скважиной, а от апатитов вас давно накрывает апатия. 
@@ -94,53 +94,53 @@
                 </p>
                 </div>
             </div>
-            <div class="places__place">
-                <h3 class="places__place__title">Алтай</h3>
-                <div class="places__place__website">
-                    <p class="places__place__website-url-heading">URL</p>
-                    <a href="https://www.youtube.com/watch?v=7ZEsoV7kWAQ" class="places__place__website-link">YouTube</a>
+            <div class="place">
+                <h3 class="place__title">Алтай</h3>
+                <div class="place__website">
+                    <p class="place__website-url-heading">URL</p>
+                    <a href="https://www.youtube.com/watch?v=7ZEsoV7kWAQ" class="place__website-link">YouTube</a>
                 </div>
-                <img src="./images/place-altai.jpg" alt="алтай" class="places__place__image">
+                <img src="./images/place-altai.jpg" alt="алтай" class="place__image">
                 <div>
-                <p class="places__place__paragraph">
+                <p class="place__paragraph">
                     Алтай — одно из красивейших мест в России. 
                     В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и озёра. 
                     А если вы откроете в автомобиле окна, сможете познакомиться с невидимым чудом здешних мест — горным воздухом.
                 </p>
-                <p class="places__place__paragraph">
+                <p class="place__paragraph">
                     Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом. Так вы увидите всё разнообразие местной флоры и фауны. 
                     По лесам Алтая бродят лоси, над хребтами летают орлы, а на равнинах пасутся косули. И знаменитые манулы — тоже обитатели Алтайского края.
                 </p>
                 </div>
             </div>
-            <div class="places__place">
-                <h3 class="places__place__title">Зимний Байкал</h3>
-                <div class="places__place__website">
-                    <p class="places__place__website-url-heading">URL</p>
-                    <a href="https://vk.com/baikalmile" class="places__place__website-link">https://vk.com/baikalmile</a>
+            <div class="place">
+                <h3 class="place__title">Зимний Байкал</h3>
+                <div class="place__website">
+                    <p class="place__website-url-heading">URL</p>
+                    <a href="https://vk.com/baikalmile" class="place__website-link">https://vk.com/baikalmile</a>
                 </div>
-                <img src="./images/place-winter-baikal.jpg" alt="байкал" class="places__place__image">
+                <img src="./images/place-winter-baikal.jpg" alt="байкал" class="place__image">
                 <div>
-                <p class="places__place__paragraph">
+                <p class="place__paragraph">
                     Всем известен Байкал как крупнейшее озеро 
                     в мире. Многие также знают, что это самый большой источник пресной воды и одно из красивейших мест в России.
                 </p>
-                <p class="places__place__paragraph">
+                <p class="place__paragraph">
                     Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по скийорингу. Это такой вид спорта, когда лыжник привязывает себя 
                     к мотоциклу, и тандем старается развить как можно бóльшую скорость на льду. 
                     В марте 2019 года на фестивале «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.
                 </p>
                 </div>
             </div>
-            <div class="places__place">
-                <h3 class="places__place__title">Карелия</h3>
-                <div class="places__place__website">
-                    <p class="places__place__website-url-heading">URL</p>
-                    <a href="http://vodlozero.ru/" class="places__place__website-link">http://vodlozero.ru/</a>
+            <div class="place">
+                <h3 class="place__title">Карелия</h3>
+                <div class="place__website">
+                    <p class="place__website-url-heading">URL</p>
+                    <a href="http://vodlozero.ru/" class="place__website-link">http://vodlozero.ru/</a>
                 </div>
-                <img src="./images/place-karelia.jpg" alt="карелия" class="places__place__image">
+                <img src="./images/place-karelia.jpg" alt="карелия" class="place__image">
                 <div>
-                <p class="places__place__paragraph">
+                <p class="place__paragraph">
                     Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный. 
                     В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья 
                     в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.
