--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <li>Аэропортов 241</li>
             </ul>
         </section>
-        <section class="photo-grid">
+        <div class="photo-grid">
             <img src="./images/photo-grid-arisa.jpg" alt="рис. 1" class="photo-grid__item">
             <img src="./images/photo-grid-atharva-tulsi.jpg" alt="рис. 2" class="photo-grid__item">
             <img src="./images/photo-grid-baikal-2.jpg" alt="рис. 3" class="photo-grid__item">
@@ -53,7 +53,7 @@
             <img src="./images/photo-grid-sochi.jpg" alt="рис. 10" class="photo-grid__item">
             <img src="./images/photo-grid-train.jpg" alt="рис. 11" class="photo-grid__item">
             <img src="./images/photo-grid-tuman.jpg" alt="рис. 12" class="photo-grid__item">
-        </section>
+        </div>
         <section class="places">
             <div class="place">
                 <h3 class="place__title">Куршская коса</h3>
