--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <header class="header">
         <img src="./images/header-logo.svg" class="header__logo" alt="лого заголовка">
         <p class="header__lang-links">
-        <a href="#" class="header__lang-link">RU</a>
-        <a href="#" class="header__lang-link header__lang-link_unstressed">EN</a>
+        <a href="#" class="header__lang-link">Ru</a>
+        <a href="#" class="header__lang-link header__lang-link_unstressed">En</a>
         </p>
     </header>
     <section class="lead">
