--- a/index.html
+++ b/index.html
@@ -63,13 +63,15 @@
             <img src="./images/place-kosa.jpg" alt="коса" class="place__image">
             <div>
             <p class="place__paragraph">
-                Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного 
-                Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная природная зона на краю российского анклава.
+                Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта&nbsp;&mdash; спокойного
+          Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная природная
+          зона на краю российского анклава.
             </p>
             <p class="place__paragraph">
-                На этом Калининградская область не заканчивается. 
-                Для путешественника и исследователя там же по соседству — самая западная точка России, Балтийская коса, — и немецкое наследие россыпи небольших приморских городов. 
-                Атмосфера здешних мест исключает суету, окуная в спокойствие природы и запах стального, прохладного моря.
+                На этом Калининградская область не заканчивается. Для путешественника и исследователя там же по соседству
+          &nbsp;&mdash; самая западная точка России, Балтийская коса,&nbsp;&mdash; и немецкое наследие россыпи небольших
+          приморских городов. Атмосфера здешних мест исключает суету, окуная в спокойствие природы и запах стального,
+          прохладного моря.
             </p>
             </div>
         </div>
@@ -82,14 +84,14 @@
             <img src="./images/place-kolsky.jpg" alt="кольский" class="place__image">
             <div>
             <p class="place__paragraph">
-                Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на юг — 
-                тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.
+                Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на юг&nbsp;&mdash;
+          тайга, а на север&nbsp;&mdash; Ледовитый океан, прикидывающийся Баренцевым морем.
             </p>
             <p class="place__paragraph">
-                Возможно, вы смотрели Звягинцева и даже слышали историю арктического фестиваля в Териберке. 
-                Возможно, слово «Хибины» не осталось под снегом школьных воспоминаний об уроках географии. 
-                Возможно, вы не интересовались пронизывающей земную кору сверхглубокой скважиной, а от апатитов вас давно накрывает апатия. 
-                Но ваша мечта увидеть северное сияние начинает сбываться с билетом в Мурманск.
+                Возможно, вы смотрели Звягинцева и даже слышали историю арктического фестиваля в Териберке. Возможно, слово
+          «Хибины» не осталось под снегом школьных воспоминаний об уроках географии. Возможно, вы не интересовались
+          пронизывающей земную кору сверхглубокой скважиной, а от апатитов вас давно накрывает апатия.
+          Но ваша мечта увидеть северное сияние начинает сбываться с билетом в Мурманск.
             </p>
             </div>
         </div>
@@ -102,13 +104,16 @@
             <img src="./images/place-altai.jpg" alt="алтай" class="place__image">
             <div>
             <p class="place__paragraph">
-                Алтай — одно из красивейших мест в России. 
-                В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и озёра. 
-                А если вы откроете в автомобиле окна, сможете познакомиться с невидимым чудом здешних мест — горным воздухом.
+                Алтай&nbsp;&mdash; одно из красивейших мест в России.
+          В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и
+          озёра.
+          А если вы откроете в автомобиле окна, сможете познакомиться с невидимым чудом здешних мест&nbsp;&mdash; горным
+          воздухом.
             </p>
             <p class="place__paragraph">
-                Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом. Так вы увидите всё разнообразие местной флоры и фауны. 
-                По лесам Алтая бродят лоси, над хребтами летают орлы, а на равнинах пасутся косули. И знаменитые манулы — тоже обитатели Алтайского края.
+                Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом. Так вы увидите всё разнообразие местной
+          флоры и фауны. По лесам Алтая бродят лоси, над хребтами летают орлы, а на равнинах пасутся косули.
+          И знаменитые манулы&nbsp;&mdash; тоже обитатели Алтайского края.
             </p>
             </div>
         </div>
@@ -121,12 +126,12 @@
             <img src="./images/place-winter-baikal.jpg" alt="байкал" class="place__image">
             <div>
             <p class="place__paragraph">
-                Всем известен Байкал как крупнейшее озеро 
-                в мире. Многие также знают, что это самый большой источник пресной воды и одно из красивейших мест в России.
+                Всем известен Байкал как крупнейшее озеро мире. Многие также знают, что это самый большой источник
+          пресной воды и одно из красивейших мест в России.
             </p>
             <p class="place__paragraph">
-                Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по скийорингу. Это такой вид спорта, когда лыжник привязывает себя 
-                к мотоциклу, и тандем старается развить как можно бóльшую скорость на льду. 
+                Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по скийорингу. Это такой вид спорта,
+                когда лыжник привязывает себя к мотоциклу, и тандем старается развить как можно бóльшую скорость на льду.
                 В марте 2019 года на фестивале «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.
             </p>
             </div>
@@ -140,17 +145,22 @@
             <img src="./images/place-karelia.jpg" alt="карелия" class="place__image">
             <div>
             <p class="place__paragraph">
-                Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный. 
-                В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья 
-                в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.
+                Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт западнее
+          Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских национальных парков из-за непроходимых
+          болот никогда не знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому существу,
+          видевшему солнце раньше, чем увидал его Иван Грозный. В девственном лесу на сотню километров не встретишь
+          тропы.
+          А на редких тропинках деревья в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут
+          хозяин.
             </p>
             </div>
         </div>
     </section>
     <section class="cover">
-        <img src="./images/cover-trains.jpg" alt="поезда" class="cover__image">
-        <h2 class="cover__title">До байкала "на собаках"</h2>
-        <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
+        <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__link">
+            <h2 class="cover__title">До Байкала «на собаках»</h2>
+            <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
+        </a>
     </section>
     <footer class="footer">
         <a href="https://yandex.ru/maps" class="footer__link">Карты</a>
