--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </div>
     <section class="places">
         <div class="place">
-            <h3 class="place__title">Куршская коса</h3>
+            <h3 class="place__title">Куршская&nbsp;&nbsp; коса</h3>
             <div class="place__website">
                 <p class="place__website-url-heading">URL</p>
                 <a href="http://park-kosa.ru" class="place__website-link">park-kosa.ru</a>
