--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? 
             На самом деле, Россия — это целая вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. 
             А ещё увидеть все эти красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. 
-            Как, например, Вера Башмакова — смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной стране. 
+            Как, например, Вера Башмакова — смелая молодая мама, которая взяла в охапку троих детей, усадила их в&nbsp;свою «Ладу» и проехала 20 тысяч километров по родной стране. 
             Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.
         </p>
         <ul class="intro__list">
@@ -40,18 +40,18 @@
         </ul>
     </section>
     <div class="photo-grid">
-        <img src="./images/photo-grid-arisa.jpg" alt="рис. 1" class="photo-grid__item">
-        <img src="./images/photo-grid-atharva-tulsi.jpg" alt="рис. 2" class="photo-grid__item">
-        <img src="./images/photo-grid-baikal-2.jpg" alt="рис. 3" class="photo-grid__item">
-        <img src="./images/photo-grid-baikal.jpg" alt="рис. 4" class="photo-grid__item">
-        <img src="./images/photo-grid-elbrus.jpg" alt="рис. 5" class="photo-grid__item">
-        <img src="./images/photo-grid-ergaki.jpg" alt="рис. 6" class="photo-grid__item">
-        <img src="./images/photo-grid-kamchatka-1.jpg" alt="рис. 7" class="photo-grid__item">
-        <img src="./images/photo-grid-kamchatka-2.jpg" alt="рис. 8" class="photo-grid__item">
-        <img src="./images/photo-grid-kondratiev.jpg" alt="рис. 9" class="photo-grid__item">
-        <img src="./images/photo-grid-sochi.jpg" alt="рис. 10" class="photo-grid__item">
-        <img src="./images/photo-grid-train.jpg" alt="рис. 11" class="photo-grid__item">
-        <img src="./images/photo-grid-tuman.jpg" alt="рис. 12" class="photo-grid__item">
+        <img src="./images/photo-grid-train.jpg" alt="поезд" class="photo-grid__item">
+        <img src="./images/photo-grid-atharva-tulsi.jpg" alt="тулси" class="photo-grid__item">
+        <img src="./images/photo-grid-tuman.jpg" alt="туман" class="photo-grid__item">
+        <img src="./images/photo-grid-sochi.jpg" alt="сочи" class="photo-grid__item">
+        <img src="./images/photo-grid-arisa.jpg" alt="ариса" class="photo-grid__item">
+        <img src="./images/photo-grid-baikal.jpg" alt="байкал-1" class="photo-grid__item">
+        <img src="./images/photo-grid-elbrus.jpg" alt="эльбрус" class="photo-grid__item">
+        <img src="./images/photo-grid-kondratiev.jpg" alt="кондратьев" class="photo-grid__item">
+        <img src="./images/photo-grid-kamchatka-1.jpg" alt="камчатка-1" class="photo-grid__item">
+        <img src="./images/photo-grid-kamchatka-2.jpg" alt="камчатка-2" class="photo-grid__item">
+        <img src="./images/photo-grid-baikal-2.jpg" alt="байкал-2" class="photo-grid__item">
+        <img src="./images/photo-grid-ergaki.jpg" alt="ергаки" class="photo-grid__item">
     </div>
     <section class="places">
         <div class="place">
@@ -64,13 +64,13 @@
             <div>
             <p class="place__paragraph">
                 Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта&nbsp;&mdash; спокойного
-          Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная природная
-          зона на краю российского анклава.
+          Куршского залива с одной стороны и&nbsp;подёрнутого рябью волн Балтийского моря с&nbsp;другой. Уникальная природная
+          зона на&nbsp;краю российского анклава.
             </p>
             <p class="place__paragraph">
-                На этом Калининградская область не заканчивается. Для путешественника и исследователя там же по соседству
-          &nbsp;&mdash; самая западная точка России, Балтийская коса,&nbsp;&mdash; и немецкое наследие россыпи небольших
-          приморских городов. Атмосфера здешних мест исключает суету, окуная в спокойствие природы и запах стального,
+                На этом Калининградская область не заканчивается. Для&nbsp;путешественника и&nbsp;исследователя там же по&nbsp;соседству&nbsp;&mdash; 
+                самая западная точка России, Балтийская коса,&nbsp;&mdash; и&nbsp;немецкое наследие россыпи небольших
+          приморских городов. Атмосфера здешних мест исключает суету, окуная в&nbsp;спокойствие природы и запах стального,
           прохладного моря.
             </p>
             </div>
@@ -85,7 +85,7 @@
             <div>
             <p class="place__paragraph">
                 Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на юг&nbsp;&mdash;
-          тайга, а на север&nbsp;&mdash; Ледовитый океан, прикидывающийся Баренцевым морем.
+          тайга, а&nbsp;на север Ледовитый океан, прикидывающийся Баренцевым морем.
             </p>
             <p class="place__paragraph">
                 Возможно, вы смотрели Звягинцева и даже слышали историю арктического фестиваля в Териберке. Возможно, слово
@@ -105,15 +105,15 @@
             <div>
             <p class="place__paragraph">
                 Алтай&nbsp;&mdash; одно из красивейших мест в России.
-          В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и
+          В&nbsp;первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и
           озёра.
-          А если вы откроете в автомобиле окна, сможете познакомиться с невидимым чудом здешних мест&nbsp;&mdash; горным
+          А&nbsp;если вы откроете в автомобиле окна, сможете познакомиться с невидимым чудом здешних мест&nbsp;&mdash; горным
           воздухом.
             </p>
             <p class="place__paragraph">
                 Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом. Так вы увидите всё разнообразие местной
-          флоры и фауны. По лесам Алтая бродят лоси, над хребтами летают орлы, а на равнинах пасутся косули.
-          И знаменитые манулы&nbsp;&mdash; тоже обитатели Алтайского края.
+          флоры и фауны. По лесам Алтая бродят лоси, над хребтами летают орлы, а&nbsp;на равнинах пасутся косули.
+          И&nbsp;знаменитые манулы&nbsp;&mdash; тоже обитатели Алтайского края.
             </p>
             </div>
         </div>
@@ -126,12 +126,12 @@
             <img src="./images/place-winter-baikal.jpg" alt="байкал" class="place__image">
             <div>
             <p class="place__paragraph">
-                Всем известен Байкал как крупнейшее озеро мире. Многие также знают, что это самый большой источник
-          пресной воды и одно из красивейших мест в России.
+                Всем известен Байкал как крупнейшее озеро в мире. Многие также знают, что это самый большой источник
+          пресной воды и&nbsp;одно из красивейших мест в&nbsp;России.
             </p>
             <p class="place__paragraph">
                 Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по скийорингу. Это такой вид спорта,
-                когда лыжник привязывает себя к мотоциклу, и тандем старается развить как можно бóльшую скорость на льду.
+                когда лыжник привязывает себя к&nbsp;мотоциклу,&nbsp;и&nbsp;тандем старается развить как можно бóльшую скорость на льду.
                 В марте 2019 года на фестивале «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.
             </p>
             </div>
@@ -147,10 +147,10 @@
             <p class="place__paragraph">
                 Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт западнее
           Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских национальных парков из-за непроходимых
-          болот никогда не знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому существу,
-          видевшему солнце раньше, чем увидал его Иван Грозный. В девственном лесу на сотню километров не встретишь
+          болот никогда не знали топора. Некоторым соснам уже больше чем&nbsp;полтысячелетия. Прикоснитесь к живому существу,
+          видевшему солнце раньше, чем увидал его Иван Грозный. В&nbsp;девственном лесу на сотню километров не встретишь
           тропы.
-          А на редких тропинках деревья в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут
+          А на редких тропинках деревья в&nbsp;паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут
           хозяин.
             </p>
             </div>
@@ -159,7 +159,7 @@
     <section class="cover">
         <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__link">
             <h2 class="cover__title">До Байкала «на собаках»</h2>
-            <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
+            <p class="cover__subtitle">По мотивам учебной темы о&nbsp;Транссибе — путешествие от&nbsp;столицы&nbsp;до&nbsp;Байкала на электричках.</p>
         </a>
     </section>
     <footer class="footer">
