исправление замечаний по ревью.

--- a/index.html
+++ b/index.html
@@ -42,8 +42,7 @@
                 <li><span class="intro__list_bold">Аэропортов</span> 241</li>
             </ul>
         </section>
-        <!-- тут используется div вместо section, т.к. в section непременно должны присутствовать заголовки, а в этом разделе их нет -->
-        <div class="photo-grid">
+        <section class="photo-grid">
             <img src="./images/photo-grid-train.jpg" alt="вид из окна купэ поезда" class="photo-grid__item">
             <img src="./images/photo-grid-atharva-tulsi.jpg" alt="заснеженные вершины гор под облаками" class="photo-grid__item">
             <img src="./images/photo-grid-tuman.jpg" alt="туман над полем со стогами сена" class="photo-grid__item">
@@ -56,7 +55,7 @@
             <img src="./images/photo-grid-kamchatka-2.jpg" alt="предгорье и высокая заснеженная гора" class="photo-grid__item">
             <img src="./images/photo-grid-baikal-2.jpg" alt="вид на зимний байкал с холма" class="photo-grid__item">
             <img src="./images/photo-grid-ergaki.jpg" alt="вершины гор в тумане" class="photo-grid__item">
-        </div>
+        </section>
         <section class="places">
             <article class="place">
                 <h2 class="place__title">Куршская&nbsp;&nbsp; коса</h2>
