Исправление отступов для некоторых макетов

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 <div>
                 <p class="place__paragraph">
                     Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на юг&nbsp;&mdash;
-              тайга, а&nbsp;на север Ледовитый океан, прикидывающийся Баренцевым морем.
+              тайга, а&nbsp;на север&nbsp;&mdash; Ледовитый океан, прикидывающийся Баренцевым морем.
                 </p>
                 <p class="place__paragraph">
                     Возможно, вы смотрели Звягинцева и даже слышали историю арктического фестиваля в Териберке. Возможно, слово
@@ -136,7 +136,7 @@
                 </p>
                 <p class="place__paragraph">
                     Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по скийорингу. Это такой вид спорта,
-                    когда лыжник привязывает себя к&nbsp;мотоциклу,&nbsp;и&nbsp;тандем старается развить как можно бóльшую скорость на льду.
+                    когда лыжник привязывает себя к&nbsp;мотоциклу, и&nbsp;тандем старается развить как&nbsp;можно бóльшую скорость на льду.
                     В марте 2019 года на фестивале «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.
                 </p>
                 </div>
