--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
                 Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.
             </p>
             <ul class="intro__list">
-                <li><span class="intro__list_bold">Часовых поясов</span> 11</li>
-                <li><span class="intro__list_bold">Объектов природного наследия ЮНЕСКО</span> 12</li>
-                <li><span class="intro__list_bold">Объектов культурного наследия ЮНЕСКО</span> 16</li>
-                <li><span class="intro__list_bold">Природных заповедников</span> 105</li>
-                <li><span class="intro__list_bold">Аэропортов</span> 241</li>
+                <li><span class="page__bold-text">Часовых поясов</span> 11</li>
+                <li><span class="page__bold-text">Объектов природного наследия ЮНЕСКО</span> 12</li>
+                <li><span class="page__bold-text">Объектов культурного наследия ЮНЕСКО</span> 16</li>
+                <li><span class="page__bold-text">Природных заповедников</span> 105</li>
+                <li><span class="page__bold-text">Аэропортов</span> 241</li>
             </ul>
         </section>
         <section class="photo-grid">
