--- a/index.html
+++ b/index.html
@@ -162,9 +162,9 @@
         </article>
       </section>
       <section class="cover">
-        <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="page__link cover__link">
+        <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="page__link cover__link" target="_blank">
           <h2 class="cover__title">До Байкала «на&nbsp;собаках»</h2>
-          <p class="cover__subtitle">По мотивам учебной темы о&nbsp;Транссибе — путешествие от&nbsp;столицы&nbsp;до&nbsp;Байкала на электричках.</p>
+          <p class="cover__subtitle">По мотивам учебной темы о&nbsp;Транссибе —&nbsp;путешествие от&nbsp;столицы&nbsp;до&nbsp;Байкала на электричках.</p>
         </a>
       </section>
     </main>
